Sun Aug 31 12:32:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_chdir): fixed typo.

Sun Aug 31 00:40:45 2008  Koichi Sasada  <ko1@atdot.net>

	* sampledriver/main.c: added.

Sun Aug 31 00:02:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_wrap_cstr): new function.

	* dir.c (ruby_dirfd): returns directory fd.

	* dir.c (chdir_restore): restores thread cwd.

	* file.c (ruby_fd_getcwd): returns path for fd.

Sat Aug 30 22:45:00 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_queue_shift): fix memory leak.

Sat Aug 30 20:06:24 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_thread_struct): added signal and message
	  queues.

	* thread.c (rb_queue_initialize, rb_queue_destroy, rb_queue_push),
	  (rb_queue_shift): new functions.

	* thread.c (rb_thread_execute_interrupts): uses signal queue.

	* thread.c (ruby_vm_send_signal): extracted from vm_send_signal.

	* vm.c (vm_free): unlock and destroys global_vm_lock.

	* vm.c (th_init2, thread_free): initializes and destroys signal and
	  message queues.

Sat Aug 30 20:05:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_open, rb_w32_read, rb_w32_write): fallback to
	  MSVCRT if text mode is specified. this case will not be used from
	  ruby itself.

Sat Aug 30 19:49:38 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): EOF is not error.
	  ref [ruby-dev:36050]

Sat Aug 30 18:17:40 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (struct token_info): constified.

	* parse.y (token_info_get_column, token_info_has_nonspaces),
	  (token_info_push, token_info_pop): constified.

Sat Aug 30 16:38:23 2008    <nobu@ruby-lang.org>

	* vm_core.h (struct rb_vm_struct): replaced signal staff with trap
	  staff.

	* signal.c (signal_buff): per process resouce now.

	* signal.c (trap_list): moved to VM.

	* signal.c (rb_get_next_signal): reverted.

	* signal.c (rb_trap_exit): trap_pending_list was no longer used.